small changes to notebook (text only)

--- a/FFN_Hueckesfeld2020_default.ipynb
+++ b/FFN_Hueckesfeld2020_default.ipynb
@@ -7,11 +7,7 @@
     "## Artificial Neural Network (ANN) test\n",
     "In this notebook, we will explore the use of an ANN to predict impact of sensory inputs onto endocrine outputs. \n",
     "\n",
-    "To run this notebook you need the following dependencies:\n",
-    "- `pandas`\n",
-    "- `numpy`\n",
-    "- `pymaid`\n",
-    "- `seaborn`"
+    "To run this notebook you need the install `pymaid` ([link](https://seaborn.pydata.org)) and its dependencies to interface with and load data from CATMAID servers."
    ]
   },
   {
@@ -56,15 +52,15 @@
     "import numpy as np\n",
     "\n",
     "import pymaid\n",
-    "#from connect_catmaid import *\n",
-    "pymaid.set_pbars(jupyter=False)\n",
+    "pymaid.set_pbars(jupyter=False)  # this just makes sure we use text progress bars in case the Jupyter widget is not installed\n",
     "\n",
-    "#type catmaid cedentials here:\n",
-    "rm = pymaid.CatmaidInstance('https://neurocean.janelia.org/catmaidL1','name','password','token')\n",
-    "rm.max_threads=10\n",
+    "# You will need credentials to access this non-public CATMAID server \n",
+    "# After publication the data will also be hosted by VFB on a public server\n",
+    "# and we will adjust the URL accordingly\n",
+    "rm = pymaid.CatmaidInstance('https://neurocean.janelia.org/catmaidL1', 'HTTP_USER', 'HTTP_PASSWORD', 'API_TOKEN')\n",
+    "rm.max_threads = 10  # reduces the number of parallel queries made to the server (for slower connections)\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "import seaborn as sns"
    ]
   },
@@ -75,7 +71,7 @@
    "outputs": [],
    "source": [
     "class ANN:\n",
-    "    \"\"\" Simple Artificial Neural Network without backpropagation.\n",
+    "    \"\"\"Simple Artificial Neural Network without backpropagation.\n",
     "    \n",
     "    Parameters\n",
     "    ----------\n",
@@ -83,6 +79,7 @@
     "                    Symmetrical (MxM) adjacency matrix.\n",
     "    input, output : list\n",
     "                    Inputs and outputs of the network as labelled in columns/index of `adj`\n",
+    "                    \n",
     "    \"\"\"\n",
     "    \n",
     "    def __init__(self, adj, inputs, outputs):\n",
@@ -143,9 +140,9 @@
     "        Returns\n",
     "        -------\n",
     "        pandas.Series\n",
-    "                    DataTable with predicated activity of outputs.                \n",
-    "        \"\"\"\n",
-    "        \n",
+    "                    DataTable with predicated activity of outputs.\n",
+    "                    \n",
+    "        \"\"\"        \n",
     "        if not callable(act_func):\n",
     "            raise TypeError('act_func must be Callable')\n",
     "        \n",
@@ -557,13 +554,6 @@
    "source": [
     "ax = plot_results(res)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1367,13 +1357,6 @@
     "        continue\n",
     "    ax.set_xlabel('')    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1392,9 +1375,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.5"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
